tests/ui/associated-item/duplicate_bound_err.stderr
error[E0282]: type annotations needed
  --> $DIR/duplicate_bound_err.rs:9:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0282]: type annotations needed
  --> $DIR/duplicate_bound_err.rs:13:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error[E0282]: type annotations needed
  --> $DIR/duplicate_bound_err.rs:17:5
   |
LL |     iter::empty()
   |     ^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `empty`
   |
help: consider specifying the generic argument
   |
LL |     iter::empty::<T>()
   |                +++++

error: unconstrained opaque type
  --> $DIR/duplicate_bound_err.rs:21:51
   |
LL | type ETAI1<T: Iterator<Item: Copy, Item: Send>> = impl Copy;
   |                                                   ^^^^^^^^^
   |
   = note: `ETAI1` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_bound_err.rs:23:51
   |
LL | type ETAI2<T: Iterator<Item: Copy, Item: Copy>> = impl Copy;
   |                                                   ^^^^^^^^^
   |
   = note: `ETAI2` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_bound_err.rs:25:57
   |
LL | type ETAI3<T: Iterator<Item: 'static, Item: 'static>> = impl Copy;
   |                                                         ^^^^^^^^^
   |
   = note: `ETAI3` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_bound_err.rs:28:14
   |
LL | type ETAI4 = impl Iterator<Item: Copy, Item: Send>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI4` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_bound_err.rs:30:14
   |
LL | type ETAI5 = impl Iterator<Item: Copy, Item: Copy>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI5` must be used in combination with a concrete type within the same crate

error: unconstrained opaque type
  --> $DIR/duplicate_bound_err.rs:32:14
   |
LL | type ETAI6 = impl Iterator<Item: 'static, Item: 'static>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `ETAI6` must be used in combination with a concrete type within the same crate

error[E0277]: `*const ()` cannot be sent between threads safely
  --> $DIR/duplicate_bound_err.rs:35:18
   |
LL | fn mismatch() -> impl Iterator<Item: Copy, Item: Send> {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `*const ()` cannot be sent between threads safely
LL |     iter::empty::<*const ()>()
   |     -------------------------- return type was inferred to be `std::iter::Empty<*const ()>` here
   |
   = help: the trait `Send` is not implemented for `*const ()`

error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/duplicate_bound_err.rs:39:20
   |
LL | fn mismatch_2() -> impl Iterator<Item: Copy, Item: Send> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
LL |     iter::empty::<String>()
   |     ----------------------- return type was inferred to be `std::iter::Empty<String>` here

error[E0271]: expected `IntoIter<u32, 1>` to be an iterator that yields `i32`, but it yields `u32`
  --> $DIR/duplicate_bound_err.rs:91:17
   |
LL |     fn foo() -> impl Iterator<Item = i32, Item = u32> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
...
LL |         [2u32].into_iter()
   |         ------------------ return type was inferred to be `std::array::IntoIter<u32, 1>` here

error: conflicting associated type bounds for `Item`
  --> $DIR/duplicate_bound_err.rs:75:17
   |
LL | type MustFail = dyn Iterator<Item = i32, Item = u32>;
   |                 ^^^^^^^^^^^^^----------^^----------^
   |                              |           |
   |                              |           `Item` is specified to be `u32` here
   |                              `Item` is specified to be `i32` here

error: conflicting associated type bounds for `ASSOC`
  --> $DIR/duplicate_bound_err.rs:82:18
   |
LL | type MustFail2 = dyn Trait2<ASSOC = 3u32, ASSOC = 4u32>;
   |                  ^^^^^^^^^^^------------^^------------^
   |                             |             |
   |                             |             `ASSOC` is specified to be `4` here
   |                             `ASSOC` is specified to be `3` here

error[E0271]: expected `impl Iterator<Item = u32>` to be an iterator that yields `i32`, but it yields `u32`
  --> $DIR/duplicate_bound_err.rs:91:17
   |
LL |     fn foo() -> impl Iterator<Item = i32, Item = u32> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |
note: required by a bound in `Trait3::foo::{anon_assoc#0}`
  --> $DIR/duplicate_bound_err.rs:86:31
   |
LL |     fn foo() -> impl Iterator<Item = i32, Item = u32>;
   |                               ^^^^^^^^^^ required by this bound in `Trait3::foo::{anon_assoc#0}`

error[E0271]: expected `Empty<u32>` to be an iterator that yields `i32`, but it yields `u32`
  --> $DIR/duplicate_bound_err.rs:99:16
   |
LL |     uncallable(iter::empty::<u32>());
   |     ---------- ^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `uncallable`
  --> $DIR/duplicate_bound_err.rs:69:32
   |
LL | fn uncallable(_: impl Iterator<Item = i32, Item = u32>) {}
   |                                ^^^^^^^^^^ required by this bound in `uncallable`

error[E0271]: expected `Empty<i32>` to be an iterator that yields `u32`, but it yields `i32`
  --> $DIR/duplicate_bound_err.rs:100:16
   |
LL |     uncallable(iter::empty::<i32>());
   |     ---------- ^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `i32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `uncallable`
  --> $DIR/duplicate_bound_err.rs:69:44
   |
LL | fn uncallable(_: impl Iterator<Item = i32, Item = u32>) {}
   |                                            ^^^^^^^^^^ required by this bound in `uncallable`

error[E0271]: type mismatch resolving `<() as Trait>::ASSOC == 4`
  --> $DIR/duplicate_bound_err.rs:101:22
   |
LL |     uncallable_const(());
   |     ---------------- ^^ expected `4`, found `3`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `4`
              found constant `3`
note: required by a bound in `uncallable_const`
  --> $DIR/duplicate_bound_err.rs:71:46
   |
LL | fn uncallable_const(_: impl Trait<ASSOC = 3, ASSOC = 4>) {}
   |                                              ^^^^^^^^^ required by this bound in `uncallable_const`

error[E0271]: type mismatch resolving `<u32 as Trait>::ASSOC == 3`
  --> $DIR/duplicate_bound_err.rs:102:22
   |
LL |     uncallable_const(4u32);
   |     ---------------- ^^^^ expected `3`, found `4`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `3`
              found constant `4`
note: required by a bound in `uncallable_const`
  --> $DIR/duplicate_bound_err.rs:71:35
   |
LL | fn uncallable_const(_: impl Trait<ASSOC = 3, ASSOC = 4>) {}
   |                                   ^^^^^^^^^ required by this bound in `uncallable_const`

error[E0271]: type mismatch resolving `<() as Trait>::ASSOC == 4`
  --> $DIR/duplicate_bound_err.rs:103:20
   |
LL |     uncallable_rtn(());
   |     -------------- ^^ expected `4`, found `3`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `4`
              found constant `3`
note: required by a bound in `uncallable_rtn`
  --> $DIR/duplicate_bound_err.rs:73:75
   |
LL | fn uncallable_rtn(_: impl Trait<foo(..): Trait<ASSOC = 3>, foo(..): Trait<ASSOC = 4>>) {}
   |                                                                           ^^^^^^^^^ required by this bound in `uncallable_rtn`

error[E0271]: type mismatch resolving `<u32 as Trait>::ASSOC == 3`
  --> $DIR/duplicate_bound_err.rs:104:20
   |
LL |     uncallable_rtn(17u32);
   |     -------------- ^^^^^ expected `3`, found `4`
   |     |
   |     required by a bound introduced by this call
   |
   = note: expected constant `3`
              found constant `4`
note: required by a bound in `uncallable_rtn`
  --> $DIR/duplicate_bound_err.rs:73:48
   |
LL | fn uncallable_rtn(_: impl Trait<foo(..): Trait<ASSOC = 3>, foo(..): Trait<ASSOC = 4>>) {}
   |                                                ^^^^^^^^^ required by this bound in `uncallable_rtn`

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0271, E0277, E0282.
For more information about an error, try `rustc --explain E0271`.
